2007-11-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: bump version and minimum cairo version so that we can start
	implementing the 1.5.x features

== 1.4.6 ==

2007-11-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/reference/Doxyfile.in: update doxygen config file since my version of
	doxygen now complains that there are obsolete config keys

2007-11-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* NEWS: update news for 1.4.6 release
	* configure.in: bumped version

2007-08-13  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/context.cc: Add #include <cairomm/quartz_surface.h>
	to fix the build on MacOS. Thanks to Elias N (Bug #11972).

== 1.4.4 ==

2007-07-21  Murray Cumming  <murrayc@murrayc.com>

	* m4/reduced.m4: Added, containing CAIROMM_ARG_ENABLE_API_EXCEPTIONS().
	* configure.in: Use CAIROMM_ARG_ENABLE_API_EXCEPTIONS() to add a 
	--enable-api-exceptions=yes/no option.
	Used to generate a cairomm/cairommconfig.h config file, which 
	defines (or not) CAIROMM_EXCEPTIONS_ENABLED.
	* cairomm/cairommconfig.h.in: Added, used to generate cairommconfig.h
	* cairomm/private.cc:
	* cairomm/private.h: Use ifdef to replace throw_exception() with an empty 
	implementation when exceptions are disabled.
	This allows cairomm to be built when using CXXFLAGS=-fno-exceptions.

2007-07-14  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: post-release version number bump

=== 1.4.2 ===

2007-07-14  Jonathon Jongsma  <jjongsma@gnome.org>

	* NEWS: updated for 1.4.2 release
	* configure.in: bumped version to 1.4.2

2007-06-14  Dave Beckett  <dave@dajobe.org>

	* configure.in: Update the GENERIC_LIBRARY_VERSION correctly
	Was: 1:0:0 in 1.2.4
	current: interfaces were added, increment to 2
	revision: set to zero since current was incremented
	age: increment since interfaces were added
	Changed to: 2:0:1

2007-06-14  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/refptr.h: Added RefPtr(object, refcount) constructor